--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root123
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
 
