HaiThanh: Create UI Home and API GhiChu

--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.3.0</version>
 		</dependency>
-		<!--Lombox-->
+		<!--Lombok-->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
