Commit01_HaiThanh: Add api send mail and config file properties and file pom

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=5050
+# spring mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+#??a ch mail
+spring.mail.username=<>
+#App password
+spring.mail.password=<>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
